--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ShinobuBot",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,6 +17,7 @@
     "delayed-stream": "^1.0.0",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
+    "enmap": "^5.3.1",
     "event-target-shim": "^5.0.1",
     "express": "^4.17.1",
     "mime-types": "^2.1.27",
@@ -23,7 +25,5 @@
     "node-fetch": "^2.6.0",
     "prism-media": "^1.2.2",
     "setimmediate": "^1.0.5"
-  },
-  "devDependencies": {},
-  "description": ""
+  }
 }
