--- a/.env
+++ b/.env
@@ -1,5 +1,12 @@
-DISCORD_TOKEN=yourtoken
-PREFIX=yourprefix
-COLOUR=yourcolour(in hex 0xFFFFFF format)
-DEAD_EMOTE=emoteID
-LOADING_EMOTE=emoteID
+DISCORD_TOKEN=your bot's token
+COLOUR=the colour for embeds
+OWNER=the owner's ID
+
+DEAD_EMOTE=these are used for some commands that send emotes
+LOADING_EMOTE=if you'd like to yoink the emotes shoot me a dm 
+EMOTE_VERIFIED=on Discord at @zappin#1312
+EMOTE_DANCE=
+EMOTE_PLUS=
+EMOTE_MINUS=
+EMOTE_NEUTRAL=
+EMOTE_COINFLIP=
