--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "shinobot2",
-  "version": "1.0.0",
+  "name": "shinobot",
+  "version": "2.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "build": "babel src -d lib",
     "build_dev": "npm run build && npm run start",
     "start": "nodejs lib/index.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "pkly",
+  "license": "BSD",
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/runtime": "^7.11.2",
