--- a/.env.dist
+++ b/.env.dist
@@ -3,3 +3,11 @@ AUTHOR=zappin
 PREFIX=+
 EMBED_COLOR=0xFFFFFF
 OWNER=YOUR_USER_ID
+
+DEAD_EMOTE=
+LOADING_EMOTE=
+EMOTE_VERIFIED=
+EMOTE_DANCE=
+EMOTE_PLUS=
+EMOTE_MINUS=
+EMOTE_NEUTRAL=
