--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/runtime": "^7.11.2",
+    "async-mutex": "^0.2.4",
     "axios": "^0.19.2",
     "babel-plugin-lodash": "^3.3.4",
     "canvas": "^2.6.1",
