--- a/.env.dist
+++ b/.env.dist
@@ -2,6 +2,7 @@ DISCORD_TOKEN=YOUR_DISCORD_TOKEN
 PREFIX=+
 EMBED_COLOR=0xFFFFFF
 OWNER=YOUR_USER_ID
+FONTCONFIG_PATH='./assets/fonts'
 HTTP_KEEPALIVE=3000
 WEBHOOK_ID=
 WEBHOOK_TOKEN=
