--- a/.env.dist
+++ b/.env.dist
@@ -3,6 +3,7 @@ PREFIX=+
 EMBED_COLOR=0xFFFFFF
 OWNER=YOUR_USER_ID
 FONTCONFIG_PATH='./assets/fonts'
+SEQUELIZE_DSN=
 WEBHOOK_ID=
 WEBHOOK_TOKEN=
 WEEBSH_AUTHORIZATION=
