--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shinobot",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/runtime": "^7.11.2",
+    "async-mutex": "^0.2.4",
     "axios": "^0.20.0",
     "babel-plugin-lodash": "^3.3.4",
     "canvas": "^2.6.1",
