--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shinobot",
-  "version": "2.1.4",
+  "version": "2.1.5",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
@@ -11,6 +11,7 @@
   "keywords": [],
   "author": "pkly",
   "license": "BSD",
+  "repository": "https://github.com/zappin-ctrl/shinobubot.js",
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/runtime": "^7.12.5",
