--- a/bot/src/shinobu/shinobu.csproj
+++ b/bot/src/shinobu/shinobu.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.8.0" />
     <PackageReference Include="Discord.Net" Version="2.2.0" />
     <PackageReference Include="DotNetEnv" Version="2.0.0" />
   </ItemGroup>
