--- a/bot/src/shinobu.csproj
+++ b/bot/src/shinobu.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="CommandLineParser" Version="2.8.0" />
     <PackageReference Include="Discord.Net" Version="2.2.0" />
     <PackageReference Include="DotNetEnv" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
   </ItemGroup>
 
 </Project>
